# GDPR_Scraper_and_EDA

./: README.md  enforcement_tracker_data.csv  enforcement_tracker_data.json  enforcement_tracker_full_data.csv  gdpr_eda.ipynb  gdpr_scraper.ipynb  pyproject.toml  requirements.txt
