[project]
name = "portfolio-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ace-tools>=0.0",
    "bs4>=0.0.2",
    "jupyter>=1.1.1",
    "pandas>=2.2.3",
    "selenium>=4.28.1",
    "tqdm>=4.67.1",
    "webdriver-manager>=4.0.2",
]
